--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack-dev-server --hot --inline"
+    "start": "webpack webpack-dev-server --hot --inline"
   },
   "author": "",
   "license": "ISC",
