--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack",
-    "start": "webpack webpack-dev-server --hot --inline"
+    "start": "webpack-dev-server --hot"
   },
   "author": "",
   "license": "ISC",
@@ -20,9 +20,12 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-react": "^6.16.0",
+    "highcharts": "^5.0.9",
     "jsx-loader": "^0.13.2",
     "react": "^15.4.2",
+    "react-d3-components": "^0.6.6",
     "react-dom": "^15.4.2",
+    "react-highcharts": "^11.5.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.4.2"
   }
